# esp32-mass-measuring

./: CMakeLists.txt  README.md  run_cmake.sh
config_files/: FreeRTOSConfig.h  aws_demo_config.h  iot_ble_config.h  iot_ble_config_defaults.h
include/: ble_init.h  ble_server.h  diagnostic_tasks.h  hx711_driver.h  main_util.h  wifi_connect.h
src/: ble_init.c  ble_server.c  diagnostic_tasks.c  hx711_driver.c  main.c  wifi_connect.c
